<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我唱我拍</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_bottom_bar_home">新鲜事</string>
    <string name="main_bottom_bar_message">消息</string>
    <string name="main_bottom_bar_sing">我唱我拍</string>
    <string name="main_bottom_bar_me">我的空间</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 登录 -->
    <string name="login">登录</string>
    <string name="login_login">登录</string>
    <string name="login_register">用手机注册</string>
    <string name="login_phone">请输入账号</string>
    <string name="login_password">请输入密码</string>
    <string name="login_forget_password">忘了账号或密码</string>
    <string name="login_user_agreement">用户协议</string>
    <string name="login_thirdpart_type">其他登录方式</string>
    <string name="login_thirdpart_qq">QQ登陆</string>
    <string name="login_thirdpart_weibo">微博登陆</string>
    <string name="title_activity_login">登录</string>

    <!-- 注册 -->
    <string name="register">注册</string>
    <string name="register_register">注册</string>
    <string name="register_input_hint_phone">请输入手机号</string>
    <string name="register_notice_user_agreement">点击 "下一步" 表示同意《用户协议》</string>
    <string name="register_next">下一步</string>
    <string name="title_activity_verify_code">输入验证码</string>
    <!-- register -->

    <string name="register_name">昵称</string>
    <string name="register_email">输入邮箱</string>
    <string name="register_password">密码</string>
    <string name="register_notice_name_blank">手机号不能为空</string>
    <string name="register_notice_name_length">手机号不正确哦</string>
    <string name="register_notice_email_blank">邮箱不能为空</string>
    <string name="register_notice_email_format">邮箱格式不正确</string>
    <string name="register_notice_password_blank">密码不能为空</string>
    <string name="register_notice_password_length">密码长度需为6~12位</string>
    <string name="register_notice_nickname_blank">昵称不能为空</string>
    <string name="register_notice_nickname_length">昵称不能大于15个字符</string>
    <string name="register_notice_address_blank">地址不能为空</string>
    <string name="register_notice_address_length">地址不能大于15个字符</string>
    <string name="register_notice_password_confirm_error">两次输入的密码不同</string>
    <string name="register_notice_validate_code_blank">请输入验证码</string>
    <string name="register_notice_validate_code_error">验证码不正确</string>
    <string name="register_success">注册成功</string>

    <!-- setting page -->

    <string name="setting">设置</string>
    <string name="setting_other">其他设置</string>
    <string name="setting_help">使用帮助</string>
    <string name="setting_feedback">问题反馈</string>
    <string name="setting_update">版本更新</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_logout">登出</string>
    <string name="setting_push_accept">接受推送通知</string>
    <string name="setting_down_only_wify">仅在Wifi时下载书</string>

    <!-- Personal page -->

    <string name="personal">个人信息</string>
    <string name="personal_info">个人资料</string>
    <string name="personal_sex">性别</string>
    <string name="personal_password">密码</string>
    <string name="personal_signature">个性签名</string>
    <string name="personal_signature_blank">您还没有填写个人签名！</string>

    <!-- 注册手机验证码 -->
    <string name="verify_title">输入验证码</string>
    <string name="verify_input_hint_verifycode">请输入验证码</string>
    <string name="verify_next">下一步</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="title_activity_room_create">RoomCreateActivity</string>
    <string name="title_activity_song">SongActivity</string>
    <string name="title_activity_song_category">SongCategoryActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_fresh_news">FreshNewsActivity</string>
    <string name="title_activity_karaoke">KaraokeActivity</string>
    <string name="dialog_share_notice_sing">唱的真棒，快和小伙伴们分享吧</string>
    <string name="dialog_share_notice_shoot">录的真棒，快和小伙伴们分享吧</string>
    <string name="dialog_notice_send_success">发送成功</string>
    <string name="dialog_notice_working">合成中，请稍等\n(56%)</string>
    <string name="dialog_confirm_notice">确认话费%d音乐币开通会员么？</string>
    <string name="title_activity_ffmpeg4_android">FFmpeg4AndroidActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="toast_login_success">登录成功</string>
    <string name="toast_login_failed">登录失败</string>
    <string name="title_activity_my_dialog">MyDialogActivity</string>
    <string name="title_activity_my_attention">MyAttentionActivity</string>
    <string name="title_activity_wbauth">WBAuthActivity</string>
    <string name="no_more_toast">没有更多数据了哦..</string>
    <string name="title_activity_deposit">DepositActivity</string>
    <string name="title_activity_open_vip_select">OpenVipSelectActivity</string>
    <string name="title_activity_recharge">RechargeActivity</string>
    <string name="title_activity_my_attentions">MyAttentionsActivity</string>
    <string name="title_activity_already_purchase">AlreadyPurchaseActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_music__intervention">Music_InterventionActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_private_message_send">PrivateMessageSendActivity</string>
    <string name="title_activity_private_message_select_user">PrivateMessageSelectUserActivity</string>

</resources>
