<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.ylsg365.pai.activity.login.LoginActivity"
                tools:ignore="MergeRootFrame">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_common"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:background="@color/bg_main"
        android:orientation="vertical"
        android:paddingBottom="24dp"
        android:paddingTop="24dp">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/layout_edit_login_phone"
                style="@style/Yin.login.edit.container">

                <EditText
                    android:id="@+id/edit_login_phone"
                    style="@style/Yin.login.edit"
                    android:hint="@string/login_phone"
                    android:inputType="phone"
                    android:maxLength="11"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_edit_login_password"
                style="@style/Yin.login.edit.container"
                android:layout_below="@+id/layout_edit_login_phone"
                android:layout_marginTop="24dp">

                <EditText
                    android:id="@+id/edit_login_password"
                    style="@style/Yin.login.edit"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_edit_login_password"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp">
                <Button
                    android:id="@+id/btn_login_userAgreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:background="@color/transparent"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/login_user_agreement"
                    android:textColor="@color/selector_text_purple"
                    android:textSize="15dp"/>

                <Button
                    android:id="@+id/btn_login_password_forget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@color/transparent"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/login_forget_password"
                    android:textColor="@color/selector_text_purple"
                    android:textSize="15dp"/>
            </RelativeLayout>


            <Button
                android:id="@+id/btn_login_login"
                style="@style/Yin.login.button.red"
                android:layout_below="@+id/btn_login_password_forget"
                android:text="@string/login_login"
                />

            <Button
                android:id="@+id/btn_login_register"
                style="@style/Yin.login.button.purple"
                android:layout_below="@+id/btn_login_login"
                android:layout_marginTop="12.5dp"
                android:text="@string/login_register"
                />
        </LinearLayout>
    </RelativeLayout>

    <include
        layout="@layout/layout_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />
</RelativeLayout>
